build/resources/test/fixtures/public/fail/semantic/ourTests/addArrays.jmm
/*  REASON:
    Cannot add arrays
*/

class AddArrays {

    public static void main(String[] a) { 
        int[] i;
        int[] b;

        String d;
        i = new int[1];
        b = new int[2];

        d = a[1];

        i = i + b;
        i = i*b;
        i = i-b;
        i = i/b;
    }
}
